# cdx

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  README.md  SECURITY.md  USAGE.md  deny.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml  scorecards.yml
scripts/: audit-coverage.sh  audit-dependency-policy.sh  audit-docs-policy.sh  audit-host-dependencies.sh  audit-license-policy.sh  audit-lint-policy.sh  audit-package.sh  audit-readme-badges.sh  audit-readme-coverage.sh  audit-release-archive.sh  audit-release-workflow.sh  audit-supply-chain.sh  audit-workflow-actions.sh  audit-workflow-metadata.sh  coverage.sh  lib-search.sh  test-policy-audits.sh
src/: coverage_excluded.rs  lib.rs  main.rs  tests.rs
tests/: cli.rs
