[package]
name = "cdx"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Global Codex conversation picker for local chat history"
license = "MIT"
repository = "https://github.com/faustbrian/cdx"
homepage = "https://github.com/faustbrian/cdx"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE.md",
  "CHANGELOG.md",
  "INSTALLATION.md",
  "USAGE.md",
  "SECURITY.md",
  "CONTRIBUTING.md",
  "src/**/*.rs",
  "tests/**/*.rs",
]
keywords = ["codex", "cli", "tui", "history", "search"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.2"
rusqlite = { version = "0.40.1", features = ["bundled", "hooks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
let_underscore_drop = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
unwrap_in_result = "deny"
exit = "deny"
mem_forget = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
large_include_file = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
